# wsh

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  readme.md  wsh.c  wsh.h  wsh_config.h  wsh_internal.h
cmake/Modules/: FindLibFTGL.cmake  FindLibGLFW.cmake  FindLibWCM.cmake
contrib/gpc/: gpc.c  gpc.h
demo/: CMakeLists.txt
demo/contrib/wcm/cmake/Modules/: FindLibGLFW.cmake
demo/data/wash/: hatching.wash  test-square-anim-2018_3_16-23_17_24.wash
demo/res/macos/: Info.plist
demo/res/macos/Base.lproj/: MainMenu.xib
demo/src/: demo.h  main.c  ops.c  ops.h  primitives.c  primitives.h  recorder.c  recorder.h  simulator.c  simulator.h  text.c  text.h  text_ftgl.c  wash_demo_common.c  wash_demo_common.h  wsh_demo_common.c  wsh_demo_common.h
demo/src/contrib/macos/: NSAppleEventDescriptorHelperCategory.m  WacomTabletDriver.m  r_input_tablet_cocoa.h  r_input_tablet_cocoa.m
demo/src/demos/: animation.c  brush.c  cel_animation.c  cel_animation.h  demo.c  demo.h  dynamic_resize.c  dynamic_resize.h  line_ops.c  line_ops.h  mapping.c  operations.c  playback.c  procedural_brush.c  procedural_brush.h  realtime_playback.c  realtime_playback.h  resize.c  session.c  simulator.c  simulator.h  tiling.c  wsh_session.c  wsh_session.h
demo/src/input/: input_tablet.c  input_tablet.h
demo/src/support/: ops.c  ops.h  primitives.c  primitives.h  recorder.c  recorder.h  simulator.c  simulator.h  text.c  text.h  text_ftgl.c  text_ftgl.h
demo/work/wash-demo.xcodeproj/: project.pbxproj
demo/work/wash-demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/work/wash-demo.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
demo/work/wash-demo.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: wash-demo.xcscheme
demo/work/wsh-demo.xcodeproj/: project.pbxproj
demo/work/wsh-demo.xcodeproj/wash-demo.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: wash-demo.xcscheme
demo/work/wsh-demo.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: wsh-demo.xcscheme  xcschememanagement.plist
etc/spec/: spec-v001.md
src/: w_includes.h  wsh_includes.h
src/core/: w_color.c  w_color.h  wsh_color.c  wsh_color.h  wsh_palette.c  wsh_palette.h  wsh_tool.c  wsh_tool.h  wsh_tool_registry.c  wsh_tool_registry.h
src/decor/: w_brush.c  w_brush.h  w_brush_eng.c  w_brush_eng.h  w_brush_ops.c  w_brush_ops.h  w_stroke.c  w_stroke.h
src/ext/: wsh_gpc.c  wsh_gpc.h  wsh_player.c  wsh_player.h  wsh_tagdb.c  wsh_tagdb.h
src/geo/: w_color.h  w_document.c  w_document.h  w_layer.h  w_line.c  w_line.h  w_node.c  w_node.h  w_object.c  w_object.h  w_point.c  w_point.h  w_rect.c  w_rect.h  w_sequence.c  w_sequence.h  w_transform.c  w_transform.h  wsh_color.c  wsh_color.h  wsh_document.c  wsh_document.h  wsh_layer.c  wsh_layer.h  wsh_line.c  wsh_line.h  wsh_node.c  wsh_node.h  wsh_object.c  wsh_object.h  wsh_point.c  wsh_point.h  wsh_rect.c  wsh_rect.h  wsh_sequence.c  wsh_sequence.h  wsh_transform.c  wsh_transform.h
src/io/: w_io.c  w_io.h  wsh_io.c  wsh_io.h  wsh_log.c  wsh_log.h
src/scene/: wsh_sgraph.c  wsh_sgraph.h
src/serial/: w_serial.c  w_serial.h  w_serial_bin.c  w_serial_bin.h  w_serial_json.c  w_serial_json.h  w_serial_json_wsh_tool.c  w_serial_json_wsh_tool.h  w_serial_svg.c  w_serial_svg.h  wsh_serial.c  wsh_serial.h  wsh_serial_bin.c  wsh_serial_bin.h  wsh_serial_json.c  wsh_serial_json.h  wsh_serial_json_wsh_tool.c  wsh_serial_json_wsh_tool.h  wsh_serial_svg.c  wsh_serial_svg.h
src/session/: w_lib.c  w_lib.h  w_session.c  w_session.h  wsh_lib.c  wsh_lib.h  wsh_session.c  wsh_session.h
src/util/: w_anl.c  w_anl.h  w_gpc.c  w_gpc.h  w_line_ops.c  w_line_ops.h  w_math.h  w_sequence_ops.c  w_tess.c  w_tess.h  w_triangle.c  w_triangle.h  wsh_anl.c  wsh_anl.h  wsh_line_operator_pool.c  wsh_line_operator_pool.h  wsh_line_operator_stack.c  wsh_line_operator_stack.h  wsh_line_ops.c  wsh_line_ops.h  wsh_math.h  wsh_ops_point.c  wsh_ops_point.h  wsh_sequence_ops.c  wsh_sequence_ops.h
test/: CMakeLists.txt  test_wsh.c
test/src/: geometry.c  main.c  serial.c  tagdb.c
util/repair/: repair.py
work/: wsh.def  wsh.sln  wsh.vcxproj  wsh_d.def
work/wsh-ios.xcodeproj/: project.pbxproj
work/wsh-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/wsh-ios.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
work/wsh-ios.xcodeproj/xcuserdata/andrew.macfarlane.xcuserdatad/xcschemes/: wsh-release.xcscheme  xcschememanagement.plist
work/wsh-ios.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: wsh-release.xcscheme  wsh.xcscheme  xcschememanagement.plist
work/wsh-shared.xcodeproj/: project.pbxproj
work/wsh-tvos.xcodeproj/: project.pbxproj
work/wsh.xcodeproj/: project.pbxproj
work/wsh.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/wsh.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
work/wsh.xcodeproj/xcuserdata/andrew.macfarlane.xcuserdatad/xcschemes/: xcschememanagement.plist
work/wsh.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: wsh-release.xcscheme  wsh.xcscheme  xcschememanagement.plist
